--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,8 @@
     <body>
         <form id="cli" autocomplete="off">
             <select id="fsel">
-                <option value="hello">hello</option>
-                <option value="add32">add32</option>
+                <option value="print_parity">print_parity</option>
+                <!-- <option value="add32">add32</option> -->
             </select>
             <input id="input" type="text" size="79">
         </form>
