sum_digits function for loop

--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
             <select id="fsel">
                 <option value="print_parity">print_parity</option>
                 <option value="br_table_ex">br_table_ex</option>
+                <option value="sum_digits">sum_digits</option>
                 <!-- <option value="add32">add32</option> -->
             </select>
             <input id="input" type="text" size="79">
