--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
                 <option value="br_table_ex">br_table_ex</option>
                 <option value="sum_digits">sum_digits</option>
                 <option value="i32_feature">i32_feature</option>
+                <option value="f32_feature">f32_feature</option>
                 <!-- <option value="add32">add32</option> -->
             </select>
             <input id="input" type="text" size="79">
