Added runtime error

--- a/code/index.html
+++ b/code/index.html
@@ -12,6 +12,7 @@
                 <option value="i32_feature">i32_feature</option>
                 <option value="i64_feature">i64_feature</option>
                 <option value="f32_feature">f32_feature</option>
+                <option value="p3_eruntime">p3_eruntime</option>
             </select>
             <input id="input" type="text" size="79">
         </form>
