--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,8 @@
                 <option value="f64_feature">f64_feature</option>
                 <option value="average">average</option>
                 <option value="p3_eruntime">p3_eruntime</option>
+                <option value="p4_module">p4_module</option>
+                <option value="p4_func">p4_func</option>
             </select>
             <input id="input" type="text" size="79">
         </form>
