--- a/code/index.html
+++ b/code/index.html
@@ -17,6 +17,7 @@
                 <option value="p3_eruntime">p3_eruntime</option>
                 <option value="p4_module">p4_module</option>
                 <option value="p4_func">p4_func</option>
+                <option value="p4_feature">p4_feature</option>
             </select>
             <input id="input" type="text" size="79">
         </form>
