--- a/program/index.html
+++ b/program/index.html
@@ -5,11 +5,24 @@
             canvas {
                 border: 1px solid black
             }
+
+            #input {
+                text-align: right;
+            }
         </style>
     </head>
     <body>
+        <form id="eq" autocomplete="off">
+            <select id="type">
+                <option value="poly">Polynomial</option>
+            </select>
+            <input id="expr" type="text">
+
+        </form>
         <canvas id="graph" width="500" height="400"></canvas>
     </body>
 
     <script src="grapher.js"></script>
+    <script src="inputs.js"></script>
+    
 </html>
