--- a/code/index.html
+++ b/code/index.html
@@ -18,6 +18,7 @@
                 <option value="p4_module">p4_module</option>
                 <option value="p4_func">p4_func</option>
                 <option value="p4_feature">p4_feature</option>
+                <option value="p5_feature">p5_feature</option>
             </select>
             <input id="input" type="text" size="79">
         </form>
