--- a/program/index.html
+++ b/program/index.html
@@ -24,5 +24,7 @@
 
     <script src="grapher.js"></script>
     <script src="inputs.js"></script>
+    <script src="spasm.js"></script>
+    
     
 </html>
